1、整理AI辅助编程和AI工具学习的文档 2、每日饮食 3、每日读书打卡

--- a/个人开源项目/我最想做的一个开源项目.md
+++ b/个人开源项目/我最想做的一个开源项目.md
@@ -1,24 +1,30 @@
-深度参与开源项目（仅一个）：Tracee
+我最想做的一个开源是什么呢？
 
 
 
-或者说我最好奇的是什么呢？我最想做的一个开源是什么呢？
+# 一、个人实战项目
+
+![image-20251028124513302](./picture/image-20251028124513302.png)
+
+## 优先做Argus项目的原因：
+
+**1、收获github star，然后以个人项目放在明年的ebpf大会上展示会很酷，满满的成就感。**
+
+**2、通过项目实战，能很好的磨练自己的ebpf技术，在实战中成长起来。**
+
+**3、把golang开发知识捡起来，学习golang工程化实践技能。**
+
+**4、学习前端知识，补齐我的技术栈，让自己在编程之路上越走越远。**
 
 
 
-个人开源项目（仅一个）：
+# 二、个人学习积累
 
-公司项目：基于dpdk的回溯分析框架
-
-个人项目：基于ebpf的恶意软件分析框架
+![image-20251028131038411](./picture/image-20251028131038411.png)
 
 
 
 现在的学习计划中，缺少对幽兰笔记本的使用，当时买这个笔记本，最大的愿望是希望能够把内核编程学习起来，起码能够调试编写的内核模块，但是现在这个事，你做了吗？我感觉你并没有做这个事啊，ebf的调试我也没做，多少是个遗憾。
-
-
-
-在现在的nidps基础上继续写那个开源项目，写开源项目是为了更好学习知识，
 
 
 
@@ -33,12 +39,6 @@
 学习开源代码是为了更好的实现自己的开源项目；
 
 日常研究各种技术，
-
-
-
-人不能闲着，闲着就容易出问题。
-
-golang实现应用层。
 
 
 
