--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -723,3 +723,82 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 ​	做一个为期一个月的项目，很多人不紧不慢的推进，在月末时才觉察到项目进度太慢，做不完了，于是只能延期或者放弃，对自己的能力丧失信息，无法收回之前的能量感。
 
 ​	比如在进度这块，可以拆分为4周，做完一周事项，能评估出当前项目的周进度是如何的，反馈能让我们知道自己做了多少，哪里做的好，哪里做的不好，第一周的进度慢了，那么在开始第二周时，我们就需要多花点时间和精力在项目上，快马加鞭的行进，才好把落下的进度赶上来。
+
+
+
+## 7、1 外部反馈对个人成长至关重要
+
+**1）为什么外部反馈对个人成长重要呢？**
+
+人是社会性的动物，天生渴望“被看见”和“被认可”。
+
+当我们为之努力的事情被他人认可时，我们就更有动力把事情做下去。
+
+举个例子：我录制ebpf视频、dpdk视频发到b站视频专区，当看到有粉丝评论说“视频讲解的太好了”或者解决了他工作中的某个难题，我就感觉我辛辛苦苦的写文档、写demo代码、录制视频这件事做的是有价值的事，让我觉得我真真实实的帮助了他人，用自己的微薄行动影响了别人，也影响了世界，从而让我更有热情、更有动力继续把这个系列的技术视频一直做下去。
+
+如果只是自己默默的录视频，没人反馈，就算自己一直安慰自己做的不错，也因为因为动力慢慢耗尽而放弃。
+
+
+
+**2）外部反馈能帮忙辨别方向**
+
+当你在人生或职业的不同道路上尝试时，外部反馈会告诉你哪条路更适合你。
+
+如果在某个方向上你一直收到正向反馈（比如他人的认可（你真棒）、赞赏、转发你的内容），说明这条路与你的天赋、潜能、价值创造点是高度契合的。
+
+你需要多倾听这种反馈，它会告诉你该往哪里用力、该从哪里撤退。
+
+我明显感觉大家对于思路清晰的入门项目实战类的视频反响最好——点赞多、收藏多、转发多。
+
+我在这个赛道上更适合，这条路更值得我深耕。
+
+
+
+**3）外部反馈-找到自己的方向**
+
+通过观察你在不同事情上得到的外部反馈，去判断哪里是“天赋”“兴趣”“价值”三者的交汇点。
+
+当你找到同时满足“你喜欢的”、“你擅长的”、“世界有需要的”那个领域，你就会进入一种高能量且持久满足的状态。
+
+
+
+作为 Go 程序员兼技术视频创作者，可能也感受过这样的情况：
+
+- 当你录制某种教程视频时，思路异常流畅，一气呵成；
+- 当你分享某种解决方案时，别人反响特别大，甚至有观众主动二次传播；
+- 当你啃某个复杂的并发模型，别人觉得难，但你却沉浸其中、乐在其中；
+- 当你讲透一个知识点时，你反而更兴奋、更有干劲。
+
+这些时候，其实世界正通过反馈在告诉你：
+ 👉 “这里，就是你的优势区。”
+
+长期关注这些信号，你会越来越清楚自己在哪些点上既能发挥天赋，又能带来价值。
+ 这就是外部反馈的真正力量——**它帮你定位自我、发现潜能、看见方向**。
+
+
+
+## 7、2 通过“秀出自己的工作”获得外部反馈
+
+当你在做一件事时（比如写代码、学新技术、做开源项目），如果只是自己在角落里默默的努力，久而久之就会觉得枯燥，动力减弱甚至放弃。
+
+如果**你勇于把自己的进展和成果分享出去**——哪怕只是一个demo、一个解决问题的思路、一篇技术学习笔记，让别人看到你的努力和思考，你就能得到来自外界的反馈：
+
+- 有人给你点赞，给你留言说你很棒
+- 影响了他人，有人因为学了你分享的东西找到了新工作
+- 有人提出建议和想法，促进你不断改进
+
+
+
+这些反馈，就是你的努力和付出“被看见了”，你的努力就“有价值”，从而能量感被重新激活，想继续前进。
+
+所以，与其等待能量耗尽再补充，不如多展示你努力的过程、多晒出成果。
+
+分享本身就是一种能量循环。
+
+
+
+记住：
+
+“你输出，让别人受益；别人反馈，让你继续充能”
+
+“越分享 → 越被看见 → 越有能量 → 越想继续做。”
