每日读书 更新

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -801,4 +801,10 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 “你输出，让别人受益；别人反馈，让你继续充能”
 
-“越分享 → 越被看见 → 越有能量 → 越想继续做。”
+
+
+《秀出你的工作》一书建议我们：
+
+- 不必等自己有了完整的作品再秀，因为读者和观众更想要了解你做这件事的过程。
+- 不必成为专家再秀，因为非专业人士常有更精彩的视角和观点。
+- 不必因担心负面评论而不敢去秀，因为那些评论跟我们的成长和生命比起来毫不重要。
