delete not use image

--- a/探索高效工作方式.md
+++ b/探索高效工作方式.md
@@ -4,11 +4,11 @@
 
 ## 1、1 工作部分
 
-![image-20250911072047015](./picture/image-20250911072047015.png)
+![image-20250911072047015](https://gitee.com/codergeek/picgo-image/raw/master/image/202510301113113.png)
 
 ## 1、2 个人学习部分
 
-![image-20250911072313114](./picture/image-20250911072313114.png)
+![image-20250911072313114](https://gitee.com/codergeek/picgo-image/raw/master/image/202510301114545.png)
 
 从上图中可以发现个人学习包括如下几个部分：
 
@@ -33,7 +33,7 @@
 
 我们需要比较妥善的给每一件任务分配到对应的时段中，这样才能更好的完成每日的任务。
 
-![image-20250910181421085](./picture/image-20250910181421085.png)
+![image-20250910181421085](https://gitee.com/codergeek/picgo-image/raw/master/image/202510301114111.png)
 
 上述是8.25 ~ 8.29这一周的工作内容的安排。但是这么没有统计的直观。
 
@@ -53,7 +53,7 @@
 
 ## 3、1 个人技术提升跟踪表
 
-![image-20250911073130674](./picture/image-20250911073130674.png)
+![image-20250911073130674](https://gitee.com/codergeek/picgo-image/raw/master/image/202510301114794.png)
 
 其中标蓝是代表事项的优先级很高，是需要优先完成的事情，让我能够专注在当下的事情。
 
@@ -61,6 +61,6 @@
 
 ## 3、2 每周计划完成表
 
-![image-20250911073553506](./picture/image-20250911073553506.png)
+![image-20250911073553506](https://gitee.com/codergeek/picgo-image/raw/master/image/202510301114294.png)
 
 开始我是把个人事项和公司事项都放在同一个表格中的，结果我发现有点混淆，而且在给公司上级展示工作量时，不太好展示，毕竟涉及到隐私。
