1、每日读书打卡 2、每日饮食 + 记录体重

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -805,6 +805,34 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 《秀出你的工作》一书建议我们：
 
-- 不必等自己有了完整的作品再秀，因为读者和观众更想要了解你做这件事的过程。
-- 不必成为专家再秀，因为非专业人士常有更精彩的视角和观点。
-- 不必因担心负面评论而不敢去秀，因为那些评论跟我们的成长和生命比起来毫不重要。
+- **不必等自己有了完整的作品再秀**，因为读者和观众更想要了解你做这件事的过程。
+- **不必成为专家再秀**，因为非专业人士常有更精彩的视角和观点。
+- **不必因担心负面评论而不敢去秀**，因为那些评论跟我们的成长和生命比起来毫不重要。
+
+
+
+不只是“工作成果”才值得展示，“工作过程”本身也值得记录，也能成为获取外界反馈的渠道。
+
+使用图文视频的方式记录工作中的每一个步骤、预见的每一个困难、每一步的心路历程，发布到网上。
+
+
+
+## 7、3 通过外部反馈提升能量感的关键
+
+为了让外部反馈更好的带动你提升能量感，有以下关键点：
+
+- 从最容易得到外部反馈（或正反馈）的方面开始做起
+
+  - 更容易让你快速收回能量感
+  - 消耗能力感少，让你在行动的路上比别人更快点
+
+- 频繁、快速、及时的获取反馈
+
+  指频繁的创造获取外部反馈的机会，在能量感还没耗尽前获得正反馈，就要求我们学会分解“任务”，学会从“小胜”中获得鼓励。
+
+- 利用不同层次的反馈方式
+  - 互动性越高的反馈渠道对提升能量感越有效。线下课堂比线上讲授更有趣，更有成就感。是因为线下课堂互动性更强，能够通过语言、表情、提问收到外部反馈、收回能量感，而线上的教学则少了很多互动性。
+
+
+
+## 7、4 如何面对“负面反馈”和“无人反馈”
