1、每日读书打卡 2、每日记录饮食和体重

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -836,3 +836,43 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 ## 7、4 如何面对“负面反馈”和“无人反馈”
+
+面对负面反馈是每个有志青年必修的一课。如果你想成事，不仅要在当下学会适应面对负面反馈，还要准备好一辈子不间断地面对负面反馈。
+
+面对负面评价，有三种心态能帮到我们：
+
+### 1）事实性思维
+
+用“事实性思维”来面对负面反馈，不要觉得别人是否定你、攻击你，而是把这些反馈当成——**现实中正在发生的事实**。
+
+比如别人评价说“视频太长，看不完”，“视频声音太小，听不清”，这些都是外界对作品的真实反映。
+
+**你知道的越多，就越知道自己哪里做的不好？哪里做的好？哪里需要改进？才能更快更好的提升作品的质量和个人水平。**
+
+
+
+### 2）课题分离法
+
+**记住什么是“你的事”，什么是“别人的事”，做好你的事，别去操心别人的事。**
+
+在获取外部反馈这条路上，不断铲除、行动、让自己的作品被外界看到——这些是“你的事”；
+
+他人如何评价、如何回应、是否回应——这是“别人的事”。
+
+我们能做的终究只是“管好自己的事”，而没有能力左右别人怎么想、怎么说。
+
+把你自己的事情做好，是你唯一能做和应该做的事。
+
+
+
+### 3）成长性思维
+
+所谓“成长性思维”是相信自己可以变的越来越好，每一次收到的反馈都能帮你向更好的自己进发一步。
+
+**当你所做的东西反复、多次、持续地收到负面反馈或无人反馈时，也是一个很有用的信号，提醒你“是不是哪里有问题”。**
+
+你行动的越频繁，收到反馈的速度越快，调整的越快，你想目标行进的就越快。
+
+
+
+一个人的成就大小跟他愿意直面负面反馈、客观拒绝的次数成正比，我们应该关注自己的成长速度，而不仅仅是最终结果。
