1、每日读书打卡 2、每日记录饮食和体重

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -876,3 +876,80 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 一个人的成就大小跟他愿意直面负面反馈、客观拒绝的次数成正比，我们应该关注自己的成长速度，而不仅仅是最终结果。
+
+
+
+## 7、5 做有产出的人：如何产出？在哪方面产出？
+
+不论你产出多少内容，最好能围绕一个核心主题，或者一个大方向稳定的主线去做。
+
+形式可以多种多样——你可以写博客、录视频、做实战项目，也可以分享案例、讲思路——
+ 但它们最好都指向你最擅长、最想长期深耕的那个方向。
+
+用输出来倒逼输入，从行动方面，有以下方法帮你开启产出之路：
+
+**一、少做纯粹的“消费者”，多做“创造者”**
+
+因为我的创作的新手入门课程，更多的人能够更容易的入门ebpf技术，世界会因为我的创造而有所不同。
+
+
+
+**二、搭建属于自己的舞台，开始规律性的输出内容，展示自己的才华**
+
+**博客：**知乎，公众号文章，github文章
+
+**视频：**在b站网站上传了dpdk入门视频，ebpf入门视频，反馈还挺不错的。
+
+**github：**搭建自己的开源项目，展示自己的编码能力
+
+开始规律的在上述渠道输出内容，比如每周更新一个视频，每三天更新一篇文章等，频率可长可断，但是尽量不要变更。
+
+
+
+从你最熟悉的、最擅长的、最容易分享、最有表达欲的东西开始做起，不以获取粉丝数、点赞数、别人的赞扬为目的。
+
+
+
+**三、养成输出个人观点的习惯**
+
+一开始输出观点没有观点、没有新意，是正常的；
+
+随着写的越多、表达的越多、你的观点，思考就越来越稳定，观点也越来越清晰。
+
+你输出得越多就越适应自己的声音、文笔、特色，越能找到让你感觉舒适的“表达型自我“。
+
+
+
+**四、讲授一门小课**
+
+很多人都没有意识到“向别人授课”是最好的输出方式。
+
+你如果能系统地给别人传授知识，必然是已经梳理了知识体系、技能框架、前后逻辑。
+
+准备资料和讲稿的过程会帮助你向外输出。
+
+讲授的主题完全可以依据你的兴趣和优势而定，给人开课的方式能让你把摄入变成输出。
+
+
+
+## 7、6 低迷状态和个人”影响圈“的逐渐缩小
+
+​	当一个人感到自己的影响圈子不断扩大时，其能量感会升高；
+
+​	当一个人感到自己的影响圈子在不断缩小时，曾经能完成的事情现在做不到了，就会导致能量感的下降，并引发低迷状态。
+
+​	人的舒适圈、能力圈和影响力是可以一点点扩大出来的。无论你已开始影响的人多么少（哪怕只有一个），只要你不听的尝试、输出和扩展，你的世界、视野、能量和影响力都会越来越大。
+
+​	
+
+**一句话总结：**
+
+​	成长，就是把”我不敢做的事“变成”我能做的事“；
+
+​	每次你把边界往外推一点，你的能量感就会上升一点。
+
+
+
+每个人可扩展的影响圈维度是多重的，包括：
+
+生存影响圈：保证自己和家人能够衣食无忧，正常的生活。
