每日读书打卡 每日记录体重

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -952,4 +952,37 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 每个人可扩展的影响圈维度是多重的，包括：
 
-生存影响圈：保证自己和家人能够衣食无忧，正常的生活。
+**生存影响圈：**保证自己和家人能够衣食无忧，正常的生活。
+
+**技能影响圈：**你慢慢积累某个领域的专业技术，并能用自己的知识、技能、经验、能力对同领域的从业人产生正向的影响，帮助到大家。
+
+**经济影响圈：**对于自己想做的事，有金钱来支撑来完成，比如超级猩猩花钱锻炼身体，必须花钱买AI来实践。
+
+**智识影响圈：**你逐渐建立稳固的、自洽的个人认知系统，在此基础上，还能在思想、观念、做事方式上影响更广泛的人。（先帮助娃娃和老婆管理好自己的情绪。）
+
+**体验影响圈：**通过探索新爱好、认识新的人、去不同的地方旅行、尝试新的人生状态来增加自己的人生体验，并可能在此基础上扩大其他人的人生体验。
+
+
+
+每一个维度的影响圈，你都需要先搞定自己，再向外扩展。
+
+不管你现在的影响圈区域有多大，它覆盖的领域，实际上就是你能持久获得能量感的阵地。
+
+把注意力拉回到你能影响的客观范围，是重新建立能量感系统的开端。
+
+
+
+要点：
+
+关注自己的影响圈，在多个维度将其扩大，而避开让自己影响圈持续缩小的人、事、情景。
+
+
+
+## 7、7 你不是真的不想做事，你只是不喜欢在“能量洼地”做事
+
+一个人在其从事的活动中所感受的掌控力越低，就越讨厌自己的工作，这种掌控感来源于：
+
+能自己决定自己做什么、怎么做、有没有放弃的权利。
+
+
+
