更新下文档，代表自己今天学习了很多知识

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -986,3 +986,29 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 
+## 7、8 能量感影响你对世界的认知
+
+佛学中讲究“心静则国土净，心乱则世界乱”。
+
+高能量感推动人去向外扩展、扩大影响，而低能量感阻碍人发挥对外的影响，让人蜷缩在自己的世界。
+
+
+
+一个人的能力感的高低，会深深影响他如何看待自己、别人，以及面对生活的反应。
+
+
+
+### 🌞 当能量感高的时候（状态稳定、有力量、有信心）
+
+- **看待自己**：
+   觉得自己有能力、有信息，能面对问题，不轻易被打倒。
+- **看待外界**：
+   即使遇到困难，也会把它当成一种挑战或机会，想办法去解决，而不是觉得世界在“针对我”。
+- **行为反应**：
+   遇事愿意迎上去，能坚持自己想要的。
+- **自我关系**：
+   能真心地喜欢自己、尊重自己的想法，不怕和别人不一样，也敢表达情绪和需求。
+
+
+
+总结：你内在的能量高低，会改变怎么样看自己、怎么样看世界，也决定你是勇敢前行，还是被动退缩。
