最近所有文档的更新

--- a/每日读书/2-反倦怠能量站(已完结).md
+++ b/每日读书/2-反倦怠能量站(已完结).md
@@ -1012,3 +1012,38 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 总结：你内在的能量高低，会改变怎么样看自己、怎么样看世界，也决定你是勇敢前行，还是被动退缩。
+
+
+
+## 7、9 如何面对持续打击你能量感的“恶劣环境”？
+
+当你不得不待在打击你能量感的环境时，要学会用“课题分离”的方法，尽力明确什么是“我的事”，什么是“他的事”。
+
+人要做好自己能控制的范围内的事，并做好这些事。
+
+
+
+当你感到能量感被持续剥夺，首先要意识到哪些是环境的问题（他人），哪些是自己的问题。
+
+可采用“课题分离”法，理清自己影响圈的边界。
+
+
+
+改变那些我们能改变的事情，接受那些我们不能改变的事情，才是人生的常态。
+
+
+
+## 7、10 与一切能提升你能量感的人和事在一起
+
+生于世间，我就要寻找、探索让能量感增加的各种路径，呵护自己的能量感，让影响圈子不断扩大，发挥天赋，成就自己。
+
+具体方法，可以有如下方式：
+
+- 多做你擅长的事
+- 多跟欣赏你、看好你的人待在一起
+- 多记录你的胜利和成长
+- 多借助高能量群体的集体力量
+- 多做让你自己发自内心骄傲的事
+- 多通过服务更大的群体来提升自我价值感
+
+最后，多行
