打造AI时代的核心竞争力

--- a/每日读书/1-只管去做(已完结).md
+++ b/每日读书/1-只管去做(已完结).md
@@ -32,7 +32,7 @@
 
 **假：**目标不是发自内心的，而是一时激情。比如看到别人健身，你也跟风去健身房健身，当激情退去，减肥健身就半途而废了。
 
-**大：**目标超出能力范围，比如每天写1000行代码，“**每天**”都做，绝对超出了自己的能力范围。
+**大：**目标超出能力范围，比如每天写1000行代码，而且要求“**每天**”都做，绝对超出了自己的能力范围，不可避免的。
 
 **空：**写下了目标，但没有落实到计划细节中。年度计划没有拆解到每个月、每一天的计划中，导致计划内容没有得到有效的执行。
 
@@ -68,7 +68,7 @@
 
 怎么把愿景孵化为具体的目标呢？我的做法是用九宫格。
 
-![image-20250705224712028](./picture/image-20250705224712028.png)
+![image-20250705224712028](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011423807.png)
 
 如何理解这个九宫格呢？
 
@@ -785,7 +785,7 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 有人做计划：“每天慢跑5000米”，预想中是这样的：
 
-![image-20250714110941367](./picture/202507141109962.png)
+![image-20250714110941367](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011423175.png)
 
 但我们是人不是机器，我们每天的精力、情绪、时间、状态都是不一样的，就像这样：
 
@@ -928,7 +928,7 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 收集项目资料、写大纲、完成文档。
 
-![image-20250826080001653](./picture/image-20250826080001653.png)
+![image-20250826080001653](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011423690.png)
 
 首先，**做任务分解的目的是让我们能利用好碎片时间。**也只有将任务分解成多个小任务，才更方便利用碎片化的时间来完成这些一个个的小任务。
 
@@ -958,7 +958,7 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 ### 6）4D工作法
 
-![image-20250826080127352](./picture/image-20250826080127352.png)
+![image-20250826080127352](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011424221.png)
 
 - Do it now:立刻去做
 
@@ -1047,7 +1047,7 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 
 
-![image-20250826080713352](./picture/image-20250826080713352.png)
+![image-20250826080713352](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011424715.png)
 
 杂乱的各种事项经过4D工作法整理出下一步行动，进而就能梳理出“每日待办清单”。
 
@@ -1079,7 +1079,7 @@ B说他的事情也很重要和紧急，你又放下去做这件事。
 
 所以正确的做法是：“**立刻回应，而不是立刻去做**”
 
-![image-20250717171305937](./picture/image-20250717171305937.png)
+![image-20250717171305937](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011424686.png)
 
 **总之，平时做事的时候一定要有一种自己主动选择这样做的感觉，而不是因为别人怎么说，自己就怎么做。**
 
@@ -1105,13 +1105,13 @@ B说他的事情也很重要和紧急，你又放下去做这件事。
 
 所有的目标只有两类，一类是项目，一类是习惯。对于项目类型的目标，一边抬头看路，制作好甘特图，一边低头走路，用倒推分解法做出项目计划。
 
-![image-20250827080914764](./picture/image-20250827080914764.png)
+![image-20250827080914764](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011424060.png)
 
 习惯类型的目标可以写一张习惯培养卡片，然后用开汽车一样的四步法来制作培养习惯的计划。
 
-![image-20250827081029361](./picture/image-20250827081029361.png)
+![image-20250827081029361](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011424609.png)
 
-![image-20250827081115552](./picture/image-20250827081115552.png)
+![image-20250827081115552](https://gitee.com/codergeek/picgo-image/raw/master/image/202512011424346.png)
 
 不管是项目还是习惯，都要落实到每一天的计划中，使用4D工作法。
 
