1、复习 《反倦怠能量站》第一章节 2、记录每日饮食和体重

--- a/每日读书/2-反倦怠能量站(已完结).md
+++ b/每日读书/2-反倦怠能量站(已完结).md
@@ -1,4 +1,4 @@
-## 能量感定义
+## 第一章：能量感定义
 
 能量感：有干劲、充满力量，特别积极的状态。
 
@@ -16,7 +16,7 @@
 
 
 
-如果在实现大目标的路上，能不断用小目标的实现增加能量感（中途加油），如下图所示，那么系统更容易运转起来。
+**如果在实现大目标的路上，能不断用小目标的实现增加能量感（中途加油），如下图所示，那么系统更容易运转起来。**
 
 ![image-20250922143537538](./picture/image-20250922143537538.png) 
 
@@ -33,9 +33,10 @@
 不是为了得到表扬（寻求认可），不是为了证明自己厉害（追求成就感），就是单纯的“**这件事情有始有终了**”的踏实感觉。
 
 
-从学校到社会的转换，为什么很多人有无力感和缺乏正反馈的挫败感？
 
-学校的学生都有统一的完结点：期中考试、期末考试、中考、高考、大学毕业等，我们可以把这些完结点内化为自己的完结点，踏踏实实的跟着老师的安排走，只要努力学习，就能看到一个阶段的结果。
+**从学校到社会的转换，为什么很多人有无力感和缺乏正反馈的挫败感？**
+
+学校的学生都有统一的完结点：期中考试、期末考试、中考、高考、大学每学期的课程设计、大学毕业设计、大学毕业等，我们可以把这些完结点内化为自己的完结点，踏踏实实的跟着老师的安排走，只要努力学习，就能看到一个个阶段性的结果。
 
 离开学校到了社会以后，这种边界清晰的“完结点”会越来越少，需要自己去安排一切。
 
@@ -76,6 +77,33 @@
 仪式感：用一个具体的动作或行为来告诉自己“这件事做完了”，事情告一段落了。
 
 改变自己记录读书笔记的习惯，不是抄写，而是记录自己的想法。
+
+
+
+举个例子，来加深对这块内容的理解：
+
+场景一：这个月减肥8斤
+
+想想一个月减8斤，就觉得目标很难了。
+
+首先是将大目标拆解：
+
+- 小目标1：第一周减肥3斤
+- 小目标2：第二周减肥2斤
+- 小目标3：第三周减肥2斤
+- 小目标4：第四周减肥1斤
+
+开始时人的激情满满，可以多减一些，给后面几周减轻压力。
+
+每周只有2斤左右的量，我自己心里也觉得难度不大。
+
+**具体事项是：**在家锻炼30分钟
+
+**完结点：**跟着b站叶的冒险的视频，一共坚持30分钟，时间到了就结束。
+
+**仪式感：**从每日打卡清单中划掉“在家锻炼30分钟”这一项，并和家人击掌庆祝。
+
+**心理认可：**击掌那一刻，真切的感受到“今天的锻炼完成了”。
 
 
 
@@ -585,7 +613,7 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 
-# 六、告别拖延症，让自己立马行动
+# 第六章、告别拖延症，让自己立马行动
 
 人容易过度自我苛责、自我审查的习惯，我们需要学会科学的方法，来避开无谓的过度思考和能量外泄。
 
