--- a/每日读书/1-只管去做(已完结).md
+++ b/每日读书/1-只管去做(已完结).md
@@ -72,9 +72,9 @@
 
 如何理解这个九宫格呢？
 
-在中间画一个人，人脚下踩着的是三个根基，包含健康、财务（钱）、社交。
+在中间画一个人，人脚下踩着的是三个根基，包含**健康**、**财务**（钱）、**社交**。
 
-人左右手握着的是工作和生活的平很，两手抓，两手都要硬。
+人左右手握着的是**工作**和**生活**的平衡，两手抓，两手都要硬。
 
 人头顶上是三种享受，学习成长-》成长享受，体验突破-》愉悦享受，娱乐-》放松享受。
 
@@ -96,7 +96,7 @@
 
 
 
-九宫格法，能让人重新回到初心，这样就不会跑偏了。
+九宫格法，能让人重新回到初心，这样就不会跑偏了。 
 
 在实践九宫格方法时，在初期傻傻的去做就好。实践一段日子以后，再去衍生自己的方法，因为这些方法一定是有很多经验的沉淀的，不像看上去那么简单。
 
